added html elements to index

--- a/index.html
+++ b/index.html
@@ -7,11 +7,29 @@
 </head>
 <body>
     <header>
-        
+        <button id="theme-btn">Light</button>
     </header>
 
 
+    <!-- Section for the image on the left of the home page -->
+    <section>
+        <div class="circle">My First Blog</div>
+    </section>
 
+    <!-- Section for the form entry -->
+     <section>
+        <h1>What's on your mind?</h1>
+        <form>
+            <label for="username">Username:</label><br>
+            <input type="text" id="username" name="username"><br>
+            <label for="title">Title:</label><br>
+            <input type="text" id="title" name="title"><br>
+            <label for="content">content:</label><br>
+            <input type="text" id="content" name="content"><br>
+            <input type="submit" value="Submit">
+
+        </form>
+     </section>
 
 </body>
 </html>
