--- a/index.html
+++ b/index.html
@@ -3,33 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Blog</title>
+    <link rel="stylesheet" href="./Assets/css/form.css">
+    <link rel="stylesheet" href="./Assets/css/styles.css">
+
 </head>
 <body>
     <header>
         <button id="theme-btn">Light</button>
     </header>
 
+    <div class="viewport">
+        <!-- Section for the image on the left of the home page -->
+        <section>
+            <div class="circle">My First Blog</div>
+        </section>
 
-    <!-- Section for the image on the left of the home page -->
-    <section>
-        <div class="circle">My First Blog</div>
-    </section>
+        <!-- Section for the form entry -->
+        <section>
+            <h1>What's on your mind?</h1>
+            <form>
+                <label for="username">Username:</label><br>
+                <input type="text" id="username" name="username"><br>
 
-    <!-- Section for the form entry -->
-     <section>
-        <h1>What's on your mind?</h1>
-        <form>
-            <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username"><br>
-            <label for="title">Title:</label><br>
-            <input type="text" id="title" name="title"><br>
-            <label for="content">content:</label><br>
-            <input type="text" id="content" name="content"><br>
-            <input type="submit" value="Submit">
+                <label for="title">Title:</label><br>
+                <input type="text" id="title" name="title"><br>
 
-        </form>
-     </section>
+                <label for="content">Content:</label><br>
+                <textarea type="text" id="content" name="content"></textarea><br>
 
+                <input type="submit" id="submit" value="Submit">
+
+            </form>
+        </section>
+    </div>
+
+     <script src="./Assets/js/logic.js"></script>
+     <script src="./Assets/js/form.js"></script>
 </body>
 </html>
