started blog html

--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Posts</title>
+    <link rel="stylesheet" href="./Assets/css/styles.css">
+    <link rel="stylesheet" href="./Assets/css/blog.css">
 </head>
 <body>
     <header>
-
+        <h1>My First Blog</h1>
+        <div>
+            <button id="return-btn">Return</button>
+            <button id="theme-btn">Light</button>
+        </div>
     </header>
     
 
@@ -16,5 +22,8 @@
         
     </footer>
 
+
+    <script src="./Assets/js/logic.js"></script>
+    <script src="./Assets/js/blog.js"></script>
 </body>
 </html>
