--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <label for="content">Content:</label><br>
                 <textarea type="text" id="content" name="content"></textarea><br>
 
-                <input type="submit" id="submit" value="Submit">
+                <input type="button" id="submit" value="Submit">
 
             </form>
         </section>
