finished theme switcher and styling

--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./Assets/css/styles.css">
     <link rel="stylesheet" href="./Assets/css/blog.css">
 </head>
-<body>
-    <header>
+<body class="light">
+    <header class="light">
         <h1>My First Blog</h1>
         <div>
             <button id="return-btn">Return</button>
@@ -18,10 +18,10 @@
     
     <article id="blog-posts"></article>
 
-    <footer>
-        <p>placeholder</p>
-        <p>placeholder</p>
-        <p>placeholder</p>
+    <footer class="light">
+        <a href="https://github.com/tjjohnson76?tab=repositories" class="light"><strong>Portfolio:</strong> Tanner Johnson</a>
+        <p><strong>Blog:</strong> Full-Stack-Blog</p>
+        <p><strong>Email:</strong> tannerjohnson08@gmail.com</p>
     </footer>
 
 
