--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="./Assets/css/form.css">
     <link rel="stylesheet" href="./Assets/css/styles.css">
 
+
 </head>
-<body>
-    <header>
+<body class="light">
+    <header class="light">
         <button id="theme-btn">Light</button>
     </header>
 
-    <div class="viewport">
+    <div class="viewport ">
         <!-- Section for the image on the left of the home page -->
         <section>
-            <div class="circle">My First Blog</div>
+            <div class="circle light">My First Blog</div>
         </section>
 
         <!-- Section for the form entry -->
@@ -37,6 +38,7 @@
             </form>
         </section>
     </div>
+
 
      <script src="./Assets/js/logic.js"></script>
      <script src="./Assets/js/form.js"></script>
